--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Dr. Venky Pet Clinic</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -352,7 +352,7 @@
   </div>
   <!-- Header/Navbar End -->
   <div class="login-container glass-container">
-    <a href="index.html" class="back-link"><i class="fas fa-arrow-left"></i> Back to Home</a>
+    <a href="{{ url_for('serve_index') }}" class="back-link"><i class="fas fa-arrow-left"></i> Back to Home</a>
     <div class="login-header">
       <h1><i class="fas fa-paw"></i> Dr. Venky Pet Clinic</h1>
     </div>
